Add more GUI changes

--- a/src/main/resources/css/dialog-box.css
+++ b/src/main/resources/css/dialog-box.css
@@ -1,6 +1,6 @@
 .label {
-    -fx-background-color: #FFCDBC;
-    -fx-border-color: #7C3626;
+    -fx-background-color: #FFF8E1;
+    -fx-border-color: #556B2F;
     -fx-border-width: 2px;
     -fx-background-radius: 1em 1em 0 1em;
     -fx-border-radius: 1em 1em 0 1em;
